<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LaskuriActivity">

    <Chronometer
        android:id="@+id/simpleChronometer"
        android:layout_width="409dp"
        android:layout_height="620dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:padding="10pt"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912">

    </Chronometer>

    <TextView
        android:id="@+id/player1score"
        android:layout_width="46dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:background="@color/textViewBackground"
        android:gravity="center"
        android:text="@string/player1startingscore"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/simpleChronometer"
        app:layout_constraintEnd_toStartOf="@+id/player2score"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/simpleChronometer"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/player2score"
        android:layout_width="46dp"
        android:layout_height="55dp"
        android:layout_marginStart="272dp"
        android:background="@color/textViewBackground"
        android:gravity="center"
        android:text="@string/player2startingscore"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/simpleChronometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/simpleChronometer"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/player1name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/player1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="@+id/simpleChronometer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player2name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/player2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="@+id/simpleChronometer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breikki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:text="@string/breikki"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="@+id/simpleChronometer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breikki2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:text="@string/breikki"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="@+id/simpleChronometer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breikki3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:text="@string/breikki"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="@+id/simpleChronometer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breikki4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:text="@string/breikki"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="@+id/simpleChronometer"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/add1button"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/simpleChronometer"
        app:layout_constraintVertical_bias="0.208" />

    <Button
        android:id="@+id/add2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/add2button"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/simpleChronometer"
        app:layout_constraintVertical_bias="0.317" />

    <Button
        android:id="@+id/add3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/add3button"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/simpleChronometer"
        app:layout_constraintVertical_bias="0.422" />

    <Button
        android:id="@+id/add4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/add4button"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/simpleChronometer"
        app:layout_constraintVertical_bias="0.522" />

    <Button
        android:id="@+id/add5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/add5button"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/simpleChronometer"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/add6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/add6button"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/simpleChronometer"
        app:layout_constraintVertical_bias="0.727" />

    <Button
        android:id="@+id/add7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/add7button"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/simpleChronometer"
        app:layout_constraintVertical_bias="0.825" />

    <Button
        android:id="@+id/changePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeplayer"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add1"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="255dp"
        android:layout_height="36dp"
        android:text="@string/startFrame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887" />

    <ToggleButton
        android:id="@+id/virhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:text="@string/virhe"
        android:textOn="@string/virhetilaPois"
        android:textOff="@string/virhetilaPäälle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />


</androidx.constraintlayout.widget.ConstraintLayout>